Last version of the webpage committed

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <!-- ************************************** Nav ************************************************************ -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Music Instruments Shop</a>
+    <a class="navbar-brand" href="index.html">Music Instruments Shop</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -52,7 +52,7 @@
       </ul>
       <a class="btn btn-primary" href="about-us.html" role="button">About Us</a>
     </div>
-    <h5 class="text-right mr-3 font-italic">Designed by Bunyamin YAVUZ</h5>
+    <h5 class="text-right mr-3 font-italic"><a href="https://github.com/BunyaminYavuz/music-instrument-shop-webpage" style="color: darkgrey;">Designed by Bunyamin YAVUZ</a></h5>
   </div>
   <!-- ********************** Jumbotron end -->
 
