--- a/products.html
+++ b/products.html
@@ -17,7 +17,7 @@
 
   <!-- ************************************** Nav ************************************************************ -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Music Instruments Shop</a>
+    <a class="navbar-brand" href="index.html">Music Instruments Shop</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -49,8 +49,7 @@
         <!-- ************************************* Row 1 - product 1******************************************* -->
         <div class="col-sm-12 col-md-6 col-lg-4 mb-3">
           <div class="card bg-danger" style="width: 18rem;">
-            <img src="assets/products-1-1.jpg"
-              class="card-img-top" alt="...">
+            <img src="assets/products-1-1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">Fujigen Iliad Elektro Gitar BIL2M/HGM</p>
               <div class="card">14.909,13 TL
@@ -61,8 +60,7 @@
         <!-- ************************************* Row 1 - product 2******************************************* -->
         <div class="col-sm-12 col-md-6 col-lg-4 mb-3">
           <div class="card bg-info" style="width: 18rem;">
-            <img src="assets/product-1-2.jpg"
-              class="card-img-top" alt="...">
+            <img src="assets/product-1-2.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">Fujigen Odyssey Elektro Gitar JOS2TDM/MBU</p>
               <div class="card">24.932,78 TL
@@ -73,8 +71,7 @@
         <!-- ************************************* Row 1 - product 3******************************************* -->
         <div class="col-sm-12 col-md-6 col-lg-4 mb-3">
           <div class="card bg-secondary" style="width: 18rem;">
-            <img src="assets/product-1-3jpg.jpg"
-              class="card-img-top" alt="...">
+            <img src="assets/product-1-3jpg.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">Jinbao JBJ1047 Çocuk Davulu (Zil Ve Tabureli)
               </p>
@@ -92,9 +89,7 @@
         <!-- ************************************* Row 2 - product 1******************************************* -->
         <div class="col-sm-12 col-md-6 col-lg-4 mb-3">
           <div class="card  bg-success" style="width: 18rem;">
-            <img
-              src="assets/product-2-1.jpg"
-              class="card-img-top" alt="...">
+            <img src="assets/product-2-1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">Yamaha V5SC34 3/4 Keman</p>
               <div class="card">15.508,56 TL
@@ -105,8 +100,7 @@
         <!-- ************************************* Row 2 - product 2******************************************* -->
         <div class="col-sm-12 col-md-6 col-lg-4 mb-3">
           <div class="card bg-light" style="width: 18rem;">
-            <img src="assets/product-2-2.jpg"
-              class="card-img-top" alt="...">
+            <img src="assets/product-2-2.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">Yamaha V5SC34 3/4 Keman</p>
               <div class="card">30.189,83 TL
@@ -117,8 +111,7 @@
         <!-- ************************************* Row 2 - product 3******************************************* -->
         <div class="col-sm-12 col-md-6 col-lg-4 mb-3">
           <div class="card bg-warning" style="width: 18rem;">
-            <img src="assets/product-2-3.jpg"
-              class="card-img-top" alt="...">
+            <img src="assets/product-2-3.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">Yamaha V5SC34 3/4 Keman</p>
               <div class="card">4.812,26 TL
@@ -135,9 +128,7 @@
         <!-- ************************************* Row 3 - product 1******************************************* -->
         <div class="col-sm-12 col-md-6 col-lg-4 mb-3">
           <div class="card bg-dark" style="width: 18rem;">
-            <img
-              src="assets/product-3-1.jpg"
-              class="card-img-top" alt="...">
+            <img src="assets/product-3-1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">Yamaha V5SC34 3/4 Keman</p>
               <div class="card">1.043,85 TL
