--- a/about-us.html
+++ b/about-us.html
@@ -17,7 +17,7 @@
 
     <!-- ************************************** Nav ************************************************************ -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Music Instruments Shop</a>
+        <a class="navbar-brand" href="index.html">Music Instruments Shop</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
